--- a/src/Split.fxml
+++ b/src/Split.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,68 +11,81 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="640" prefHeight="-1.0" prefWidth="640" VBox.vgrow="ALWAYS">
-      <children>
-          <AnchorPane layoutX="470.0" layoutY="-10.0" minHeight="0.0" minWidth="0.0" prefHeight="96.0" prefWidth="1018.0" />
-            <SplitPane dividerPositions="0.10120240480961924" layoutY="-1.0" orientation="VERTICAL" prefHeight="1000.0" prefWidth="1107.0">
-              <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #1d64cc;">
-                     <children>
-                        <Text fill="#f5f5f5" layoutX="132.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MR COVID-19 Dashboard" textAlignment="CENTER" wrappingWidth="754.1366729736328">
-                           <font>
-                              <Font name="System Bold" size="45.0" />
-                           </font>
-                        </Text>
-                        <ImageView fitHeight="89.0" fitWidth="88.0" layoutX="88.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="https://images.theconversation.com/files/319386/original/file-20200309-167285-1p9yqjv.png?ixlib=rb-1.1.0&amp;q=45&amp;auto=format&amp;w=1000&amp;fit=clip" />
-                           </image>
-                        </ImageView>
-                        <ImageView fitHeight="89.0" fitWidth="88.0" layoutX="828.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="https://images.theconversation.com/files/319386/original/file-20200309-167285-1p9yqjv.png?ixlib=rb-1.1.0&amp;q=45&amp;auto=format&amp;w=1000&amp;fit=clip" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                     <children>
-                        <SplitPane centerShape="false" dividerPositions="0.2" layoutX="-5.0" layoutY="-4.0" prefHeight="903.0" prefWidth="1234.0" style="-fx-padding: 1 0 1 0;">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="307.0" style="-fx-background-color: #a1a1a1;">
-                                 <children>
-                                    <Button fx:id="button1" layoutX="26.0" layoutY="21.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Provider Information" />
-                                    <Button fx:id="button2" layoutX="26.0" layoutY="104.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="New Patient" />
-                                    <Button fx:id="button3" layoutX="26.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="View Stats" />
-                                    <Button fx:id="button4" layoutX="26.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Lab Results to Patients" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
-                                    <Button fx:id="button5" layoutX="26.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Report to State" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
-                                 </children>
-                              </AnchorPane>
-                              <StackPane id="mainStack">
-                                 <children>
-                                    <AnchorPane fx:id="pane1" prefHeight="200.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fitHeight="89.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="https://images.theconversation.com/files/319386/original/file-20200309-167285-1p9yqjv.png?ixlib=rb-1.1.0&amp;q=45&amp;auto=format&amp;w=1000&amp;fit=clip" />
-                                             </image>
-                                          </ImageView>
-                                       </children></AnchorPane>
-                                    <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" visible="false" />
-                                    <AnchorPane fx:id="pane3" prefHeight="200.0" prefWidth="200.0" visible="false" />
-                                    <AnchorPane fx:id="pane4" prefHeight="200.0" prefWidth="200.0" visible="false" />
-                                    <AnchorPane fx:id="pane5" prefHeight="200.0" prefWidth="200.0" visible="false" />
-                                 </children>
-                              </StackPane>
-                          </items>
-                        </SplitPane>
-                     </children>
-                  </AnchorPane>
-              </items>
+<VBox prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewController">
+    <SplitPane dividerPositions="0.165" orientation="VERTICAL" prefHeight="1000.0" prefWidth="1107.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #1d64cc;">
+            <Text fill="#f5f5f5" layoutX="132.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MR COVID-19 Dashboard" textAlignment="CENTER" wrappingWidth="754.1366729736328">
+                <font>
+                    <Font name="System Bold" size="45.0" />
+                </font>
+            </Text>
+            <ImageView fitHeight="89.0" fitWidth="88.0" layoutX="88.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="https://images.theconversation.com/files/319386/original/file-20200309-167285-1p9yqjv.png?ixlib=rb-1.1.0&amp;q=45&amp;auto=format&amp;w=1000&amp;fit=clip" />
+            </ImageView>
+            <ImageView fitHeight="89.0" fitWidth="88.0" layoutX="828.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="https://images.theconversation.com/files/319386/original/file-20200309-167285-1p9yqjv.png?ixlib=rb-1.1.0&amp;q=45&amp;auto=format&amp;w=1000&amp;fit=clip" />
+            </ImageView>
+        </AnchorPane>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+            <SplitPane centerShape="false" dividerPositions="0.2" layoutX="-5.0" layoutY="-4.0" prefHeight="903.0" prefWidth="1234.0" style="-fx-padding: 1 0 1 0;">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="307.0" style="-fx-background-color: #a1a1a1;">
+                    <Button fx:id="button1" layoutX="44.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Provider Information" />
+                    <Button fx:id="button2" layoutX="44.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="New Patient" />
+                    <Button fx:id="button3" layoutX="44.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="View Stats" />
+                    <Button fx:id="button4" layoutX="44.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Lab Results to Patients" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
+                    <Button fx:id="button5" layoutX="44.0" layoutY="419.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Report to State" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
+                    <Button fx:id="homebutton" layoutX="57.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="69.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Home" />
+                </AnchorPane>
+                <StackPane id="mainStack">
+                    <AnchorPane fx:id="homepane" prefHeight="200.0" prefWidth="200.0">
+                        <Label layoutX="293.0" layoutY="94.0" text="Home">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                  <ImageView fitHeight="128.0" fitWidth="131.0" layoutX="289.0" layoutY="147.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Resources/Heart.png" />
+                     </image>
+                  </ImageView>
+                    </AnchorPane>
+                    <AnchorPane fx:id="pane1" prefHeight="200.0" prefWidth="200.0" visible="false">
+                        <Label layoutX="279.0" layoutY="324.0" text="Provider Information :)">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                    <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" visible="false">
+                        <Label layoutX="254.0" layoutY="311.0" text="New Patient :O">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                    <AnchorPane fx:id="pane3" prefHeight="200.0" prefWidth="200.0" visible="false">
+                        <Label layoutX="272.0" layoutY="314.0" text="View Stats B)">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                    <AnchorPane fx:id="pane4" prefHeight="200.0" prefWidth="200.0" visible="false">
+                        <Label layoutX="201.0" layoutY="330.0" text="Send Those Lab Results :P">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                    <AnchorPane fx:id="pane5" prefHeight="200.0" prefWidth="200.0" visible="false">
+                        <Label layoutX="175.0" layoutY="326.0" text="Send Report to State :/">
+                            <font>
+                                <Font size="43.0" />
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                </StackPane>
             </SplitPane>
-      </children>
-    </AnchorPane>
-  </children>
+        </AnchorPane>
+    </SplitPane>
 </VBox>
