--- a/src/Split.fxml
+++ b/src/Split.fxml
@@ -97,7 +97,7 @@
                   <TextField layoutX="401.0" layoutY="360.0" promptText="First COVID-19 Test?" />
                   <Button layoutX="322.0" layoutY="401.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" text="Save" />
                     </AnchorPane>
-               <AnchorPane fx:id="updatepane" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <AnchorPane fx:id="updatepane" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" visible="false">
                   <children>
                      <Label layoutX="197.0" layoutY="27.0" text="Update Existing Patient" textAlignment="CENTER">
                         <font>
@@ -169,6 +169,28 @@
                             </font>
                         </Label>
                     </AnchorPane>
+                   <AnchorPane fx:id="updatelanding" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
+                      <children>
+                         <TextField layoutX="421.0" layoutY="101.0" promptText="Name" />
+                         <TextField layoutX="421.0" layoutY="187.0" promptText="mm/dd/yyyy" />
+                         <Button fx:id="search" onAction="#handleButtonClick" layoutX="323.0" layoutY="346.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" text="Search" />
+                         <Text layoutX="126.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Individual Patient">
+                            <font>
+                               <Font size="14.0" />
+                            </font>
+                         </Text>
+                         <Text layoutX="126.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Patient List by Test Date">
+                            <font>
+                               <Font size="14.0" />
+                            </font>
+                         </Text>
+                         <Label layoutX="202.0" layoutY="30.0" text="Update Existing Patient" textAlignment="CENTER">
+                            <font>
+                               <Font name="System Bold" size="32.0" />
+                            </font>
+                         </Label>
+                      </children>
+                   </AnchorPane>
                 </StackPane>
             </SplitPane>
         </AnchorPane>
