--- a/src/Split.fxml
+++ b/src/Split.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -35,7 +37,7 @@
                     <Button fx:id="button1" layoutX="44.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Provider Information" />
                     <Button fx:id="button2" layoutX="44.0" layoutY="159.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="New Patient" />
                     <Button fx:id="button3" layoutX="44.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="View Stats" />
-                    <Button fx:id="button4" layoutX="44.0" layoutY="356.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Lab Results to Patients" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
+                    <Button fx:id="button4" layoutX="44.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="60.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Lab Results to Patients" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
                     <Button fx:id="button5" layoutX="44.0" layoutY="419.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Send Report to State" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
                     <Button fx:id="homebutton" layoutX="44.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Home" />
                     <Button fx:id="updatebutton" layoutX="44.0" layoutY="226.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: transparent;" text="Update Patient Info" />
@@ -49,11 +51,33 @@
                         </Label>
                     </AnchorPane>
                     <AnchorPane fx:id="pane1" prefHeight="200.0" prefWidth="200.0" visible="false">
-                        <Label layoutX="279.0" layoutY="324.0" text="Provider Information :)">
-                            <font>
-                                <Font size="43.0" />
-                            </font>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="513.0" prefWidth="474.0">
+                     <children>
+                        <TextField layoutX="96.0" layoutY="97.0" promptText="First Name" />
+                        <TextField layoutX="96.0" layoutY="146.0" promptText="Last Name" />
+                        <Label layoutX="86.0" layoutY="43.0" text="Individual Provider">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
                         </Label>
+                        <ChoiceBox layoutX="87.0" layoutY="232.0" prefWidth="150.0" />
+                        <Label layoutX="110.0" layoutY="207.0" text="Select from Dropdown:" />
+                        <Button layoutX="143.0" layoutY="339.0" mnemonicParsing="false" text="Edit" />
+                        <Separator layoutX="348.0" layoutY="8.0" orientation="VERTICAL" prefHeight="513.0" prefWidth="6.0" />
+                     </children>
+                  </AnchorPane>
+                  <TextField layoutX="484.0" layoutY="85.0" promptText="Location" />
+                  <TextField layoutX="484.0" layoutY="134.0" promptText="Address" />
+                  <TextField layoutX="484.0" layoutY="186.0" prefHeight="28.0" prefWidth="63.0" promptText="City" />
+                  <ChoiceBox layoutX="613.0" layoutY="184.0" prefHeight="28.0" prefWidth="63.0" />
+                  <Label layoutX="571.0" layoutY="189.0" text="State:" />
+                  <TextField layoutX="484.0" layoutY="234.0" promptText="Phone" />
+                  <Label layoutX="476.0" layoutY="33.0" text="Clinic/Testing Site">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="540.0" layoutY="331.0" mnemonicParsing="false" text="Edit" />
                     </AnchorPane>
                     <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" visible="false">
                         <Label layoutX="278.0" layoutY="25.0" text="New Patient" textAlignment="CENTER">
@@ -97,7 +121,7 @@
                   <TextField layoutX="401.0" layoutY="360.0" promptText="First COVID-19 Test?" />
                   <Button layoutX="322.0" layoutY="401.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" text="Save" />
                     </AnchorPane>
-               <AnchorPane fx:id="updatepane" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" visible="false">
+               <AnchorPane fx:id="updatepane" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                   <children>
                      <Label layoutX="197.0" layoutY="27.0" text="Update Existing Patient" textAlignment="CENTER">
                         <font>
@@ -144,8 +168,8 @@
                            <Font size="18.0" />
                         </font>
                      </Text>
-                     <Button layoutX="249.0" layoutY="359.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Positive" />
-                     <Button layoutX="427.0" layoutY="359.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Negative" />
+                     <Button layoutX="249.0" layoutY="359.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" style="-fx-background-color: #03fc90;" text="Positive" />
+                     <Button layoutX="427.0" layoutY="359.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" style="-fx-background-color: #e6594c;" text="Negative" />
                   </children>
                </AnchorPane>
                     <AnchorPane fx:id="pane3" prefHeight="200.0" prefWidth="200.0" visible="false">
@@ -169,11 +193,11 @@
                             </font>
                         </Label>
                     </AnchorPane>
-                   <AnchorPane fx:id="updatelanding" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
+                   <AnchorPane fx:id="updatelanding" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" visible="false">
                       <children>
                          <TextField layoutX="421.0" layoutY="101.0" promptText="Name" />
                          <TextField layoutX="421.0" layoutY="187.0" promptText="mm/dd/yyyy" />
-                         <Button fx:id="search" onAction="#handleButtonClick" layoutX="323.0" layoutY="346.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" text="Search" />
+                         <Button fx:id="search" layoutX="323.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="32.0" prefWidth="97.0" text="Search" />
                          <Text layoutX="126.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Individual Patient">
                             <font>
                                <Font size="14.0" />
