--- a/src/Split.fxml
+++ b/src/Split.fxml
@@ -241,7 +241,7 @@
                                <Font name="System Bold" size="32.0" />
                             </font>
                          </Label>
-                     <Text layoutX="401.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Try &quot;Ringo&quot;, &quot;George&quot;, &quot;John&quot;, or &quot;Ray&quot;)">
+                     <Text layoutX="401.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Try &quot;Ringo&quot;, &quot;George&quot;, &quot;Paul&quot;, or &quot;Ray&quot;)">
                         <font>
                            <Font name="System Italic" size="12.0" />
                         </font>
